[package]
name = "solrbulk"
version = "0.1.0"
authors = ["Juarez Rudsatz <juarezr@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.9"
regex = "1.3.4"
url = "2.1.1"
lazy_static = "1.4.0"
reqwest = { version = "0.10.1", features = ["blocking"] }
zip = "0.5.4"
indicatif = "0.14.0"
chrono = "0.4"
glob = "0.3.0"

# end of the file
