[package]
name = "solrcopy"
version = "0.4.4"
edition = "2018"

authors = ["Juarez Rudsatz <juarezr@gmail.com>"]
description = "Tool for backup and restore of documents stored in cores of solr"
homepage = "https://github.com/juarezr/solrcopy"
repository = "github.com:juarezr/solrcopy.git"
license = "gpl-3.0-or-later"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["solr", "dataimport", "dih", "fulltext-search", "apache-solr"]

[dependencies]
clap = "2.33.0"
structopt = "0.3.14"
regex = "1.3.7"
url = "2.1.1"
lazy_static = "1.4.0"
ureq = { version = "1.0.0", features = ["tls"] }
zip = { version = "0.5.5",  features = ["deflate", "time"] }
indicatif = "0.14.0"
chrono = "0.4.11"
glob = "0.3.0"
log = "0.4.8"
simplelog = "0.7.6"
crossbeam-channel = "0.4.2"
crossbeam-utils = "0.7"
ctrlc = { version = "3.1.4", features = ["termination"] }

[build-dependencies]
clap = "2.33.0"
structopt = "0.3.14"
regex = "1.3.7"
url = "2.1.1"
lazy_static = "1.4.0"

[badges]
travis-ci = { repository = "juarezr/solrcopy", branch = "master" }

[features]

# A feature with no dependencies used mainly for conditional compilation
# like `#[cfg(feature = "artifacts")]` or if cfg!(feature = "artifacts") {}
artifacts = []

# cargo deb: used for generating a debian package
#  - https://github.com/mmstick/cargo-deb

[package.metadata.deb]
section = "utils"
priority = "optional"
changelog = "changelog.txt"
assets = [
  ["target/release/solrcopy", "usr/bin/", "755"],
  ["LICENSE", "usr/share/doc/solrcopy/", "644"],
  ["changelog.txt", "usr/share/doc/solrcopy/", "644"],
  ["README.md", "usr/share/doc/solrcopy/README", "644"],
  # Shell completions are generated by running:
  # $ cargo run --release --features artifacts -- --version
  ["target/release/solrcopy.bash", "usr/share/bash-completion/completions/solrcopy", "644"],
  ["target/release/solrcopy.fish", "usr/share/fish/vendor_completions.d/solrcopy.fish", "644"],
  ["target/release/_solrcopy", "usr/share/zsh/vendor-completions/", "644"],  
]
extended-description = """\
Solrcopy is a command for doing backup and restore of documents stored on Solr \
cores. It let you filter docs by using a expression, limit quantity, define order\
and desired columns to export. The data is stored as json inside local zip files.\
It is agnostic to data format, content and storage place. \
Because of this data is restored exactly as extracted and your responsible for \
extracting, storing and updating the correct data in correct cores."""

# cargo rpm: used for generating a fedora package
#  - https://github.com/RustRPM/cargo-rpm

[package.metadata.rpm.cargo]
# profile = "release"
target = "x86_64-unknown-linux-gnu"
buildflags = ["--release", "--verbose"]

[package.metadata.rpm.targets]
solrcopy = { path = "/usr/bin/solrcopy" }

# [package.metadata.rpm.files]
# "solrcopy.bash" = { path = "/usr/share/bash-completion/completions/solrcopy" }
# "solrcopy.fish" = { path = "/usr/share/fish/vendor_completions.d/solrcopy.fish" }
# "_solrcopy" = { path = "/usr/share/zsh/vendor-completions/_solrcopy" }

# TODO: man page: https://rust-cli.github.io/book/in-depth/docs.html

# end of the file
